# resources/views/emails/change-password.blade.php
@@ -1,0 +1,4 @@
+<p>Use this URL to change your password:</p>
+<p>
+    {{ $baseURL }}/api/auth/forgot-password/{{ $content }}
+</p>
